// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default basic: basic 1`] = `
"
import reducer, {initialState} from './actions'

      ↓ ↓ ↓ ↓ ↓ ↓

import reducer, { initialState } from './actions';

test('handle INCREMENT', () => {
  expect(reducer(initialState, actions.increment())).toEqual(null);
});

test('handle DECREMENT', () => {
  expect(reducer(initialState, actions.decrement())).toEqual(null);
});
"
`;

exports[`default exist test case: exist test case 1`] = `
"
import reducer, {initialState} from './actions'
import * as actions from './actions'

test('handle INCREMENT', () => {
  expect(actions.sample()).toEqual(null)
})

      ↓ ↓ ↓ ↓ ↓ ↓

import reducer, { initialState } from './actions';
import * as actions from './actions';

test('handle INCREMENT', () => {
  expect(actions.sample()).toEqual(null);
});

test('handle DECREMENT', () => {
  expect(reducer(initialState, actions.decrement())).toEqual(null);
});
"
`;

exports[`with initial state basic: basic 1`] = `
"
import reducer, {initialState} from './actions'

      ↓ ↓ ↓ ↓ ↓ ↓

import reducer, { initialState } from './actions';

test('handle INCREMENT', () => {
  expect(reducer(initialState, actions.increment())).toEqual({ count: 0 });
});

test('handle DECREMENT', () => {
  expect(reducer(initialState, actions.decrement())).toEqual({ count: 0 });
});
"
`;

exports[`with initial state exist test case: exist test case 1`] = `
"
import reducer, {initialState} from './actions'
import * as actions from './actions'

test('handle INCREMENT', () => {
  expect(actions.sample()).toEqual(null)
})

      ↓ ↓ ↓ ↓ ↓ ↓

import reducer, { initialState } from './actions';
import * as actions from './actions';

test('handle INCREMENT', () => {
  expect(actions.sample()).toEqual(null);
});

test('handle DECREMENT', () => {
  expect(reducer(initialState, actions.decrement())).toEqual({ count: 0 });
});
"
`;
